<resources>
    <string name="app_name">Tarex</string>
    <string name="lorem_ipsum">Lorem ipsum dolar sit amet, consectetur adiping elit.</string>
    <string name="name_restaraunt">HUMO Chaihona restaraunt</string>
    <string name="title_description">Description</string>
    <string name="working_hours">Часы работы</string>
    <string name="monday">Пн</string>
    <string name="tuesday">Вт</string>
    <string name="wednesday">Ср</string>
    <string name="thursday">Чт</string>
    <string name="friday">Пт</string>
    <string name="saturday">Сб</string>
    <string name="sunday">Вс</string>
    <string name="lorem_ipsum_big">Lorem ipsum dolor sit amet, ad doctus audire vulputate usu. Et accusam electram mediocritatem mea. Ea aeterno appetere mediocrem sed. In eros facer apeirian vim, ad vel enim perpetua. Ad enim partiendo nam, quodsi similique eu vel. No vix justo tempor accumsan, ei civibus dissentiunt vel, pro no facete delicata. Regione disputationi mea no, pri movet copiosae dissentiet ea. Eum id hinc suavitate, accusamus adolescens temporibus ad vel.</string>
    <string name="loginWithoutAuth">Войти без авторизации</string>
    <string name="login">Вход</string>
    <string name="your_login">Ваш логин</string>
    <string name="your_name">Ваше имя</string>
    <string name="your_surname">Ваша фамилия</string>
    <string name="your_phone_number">Ваш номер телефона</string>
    <string name="register">зарегистрироваться</string>
    <string name="your_password">Ваш пароль</string>
    <string name="clear_toolbar">Очистить список</string>

    <integer-array name="countPeople">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </integer-array>
</resources>
