<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация нового пользователя"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_large" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="@dimen/padding_xlarge"></LinearLayout>

    <EditText
        android:id="@+id/et_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"
        android:hint="@string/your_login"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"
        android:hint="@string/your_name"/>

    <EditText
        android:id="@+id/et_surname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"
        android:hint="@string/your_surname"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"
        android:hint="@string/your_phone_number"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_gravity="center_horizontal"
        android:hint="@string/your_password"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/register"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>