<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_restaraunt">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name_restaraunt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_large"
            tools:text="@string/name_restaraunt"/>

        <TextView
            android:id="@+id/tv_description_details_restaraunt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_small"
            tools:text="Аделя Кутуя ул., 16 " />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textColor="@color/colorBlack"
            android:text="@string/working_hours"/>
<HorizontalScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:textColor="@color/colorBlack"
                android:text="@string/monday"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_1"
                android:text="10-18"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/line"/>

            <TextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_1"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:textColor="@color/colorBlack"
                android:text="@string/tuesday"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_1"
                android:layout_below="@id/tv_2"
                android:text="10-18"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/line"
                android:layout_toRightOf="@id/tv_1"/>

            <TextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_2"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:textColor="@color/colorBlack"
                android:text="@string/wednesday"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_2"
                android:layout_below="@id/tv_3"
                android:text="10-18"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/line"
                android:layout_toRightOf="@id/tv_2"/>
            <TextView
                android:id="@+id/tv_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_3"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:textColor="@color/colorBlack"
                android:text="@string/thursday"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_3"
                android:layout_below="@id/tv_4"
                android:text="10-18"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/line"
                android:layout_toRightOf="@id/tv_3"/>
            <TextView
                android:id="@+id/tv_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_4"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_large"
                android:textColor="@color/colorBlack"
                android:text="@string/friday"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_4"
                android:layout_below="@id/tv_5"
                android:text="10-18"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/line"
                android:layout_toRightOf="@id/tv_4"/>
            <TextView
                android:id="@+id/tv_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_5"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_xlarge"
                android:textColor="@color/colorBlack"
                android:text="@string/saturday"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_5"
                android:layout_below="@id/tv_6"
                android:text="10-18"/>
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="@dimen/margin_medium"
                android:src="@drawable/line"
                android:layout_toRightOf="@id/tv_5"/>
            <TextView
                android:id="@+id/tv_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_6"
                android:textColor="@color/colorBlack"
                android:text="@string/sunday"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_toRightOf="@id/tv_6"
                android:layout_below="@id/tv_7"
                android:text="10-18"/>





        </RelativeLayout>
</HorizontalScrollView>

        <ProgressBar
            android:id="@+id/progress_loader"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_medium"
            android:visibility="gone"
            tools:visibility="visible"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>